unpackaged/main/default/objects/project_cloud__Stage_Gate_Checklist_Item__c/project_cloud__Stage_Gate_Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Stage Gate Checklist Item</label>
    <nameField>
        <label>Stage Gate Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Gate Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>