unpackaged/main/default/objects/project_cloud__Stage_Gate_Checklist_Item__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <description>A more in detail description of the Checklist Item</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>