unpackaged/main/default/objects/project_cloud__Stage_Gate_Checklist_Item__c/fields/project_cloud__Project_Stage_Gate__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Stage_Gate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Stage Gate</label>
    <referenceTo>project_cloud__Project_Stage_Gate__c</referenceTo>
    <relationshipLabel>Stage Gate Checklist Items</relationshipLabel>
    <relationshipName>Stage_Gate_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>